--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,31 +1,24 @@
 name: CI Pipeline
 
-# Déclencher le workflow sur push et pull request
 on:
   push:
-    branches:
-      - main
-      - master
-      - develop
+    branches: [ "main", "master" ]
   pull_request:
-    branches:
-      - main
-      - master
+    branches: [ "main", "master" ]
 
-# Définition des jobs
 jobs:
   build:
-    name: Build and Test
+    name: Build, Test & Analyze
     runs-on: ubuntu-latest
 
     steps:
-      # Étape 1 : Récupérer le code
+      # 1️⃣ Checkout code
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Important pour SonarCloud
+          fetch-depth: 0
 
-      # Étape 2 : Configurer Java 17
+      # 2️⃣ Setup Java 17
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -33,29 +26,17 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      # Étape 3 : Afficher la version Maven
-      - name: Display Maven version
-        run: mvn -version
+      # 3️⃣ Build + Test + Coverage
+      - name: Build and verify with Maven
+        run: mvn clean verify
 
-      # Étape 4 : Compiler le projet
-      - name: Build with Maven
-        run: mvn clean compile
-
-      # Étape 5 : Lancer les tests
-      - name: Run tests
-        run: mvn test
-
-      # Étape 6 : Vérifier et générer le rapport JaCoCo
-      - name: Verify and generate coverage
-        run: mvn verify
-
-      # Étape 7 : Analyse SonarCloud
+      # 4️⃣ SonarCloud Analysis
       - name: SonarCloud Scan
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn sonar:sonar -Dsonar.token=$SONAR_TOKEN
 
-      # Étape 8 : Upload des résultats de tests (optionnel)
+      # 5️⃣ Upload test results
       - name: Upload test results
         if: always()
         uses: actions/upload-artifact@v4
@@ -63,7 +44,7 @@ jobs:
           name: test-results
           path: target/surefire-reports/
 
-      # Étape 9 : Upload du rapport de couverture (optionnel)
+      # 6️⃣ Upload JaCoCo coverage
       - name: Upload coverage report
         if: always()
         uses: actions/upload-artifact@v4
