--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,12 @@ jobs:
       - name: SonarCloud Scan
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn sonar:sonar -Dsonar.token=$SONAR_TOKEN
+        run: |
+          mvn sonar:sonar \
+            -Dsonar.login=$SONAR_TOKEN \
+            -Dsonar.projectKey=projetMPISI \
+            -Dsonar.organization=hamzarejeb04 \
+            -Dsonar.host.url=https://sonarcloud.io
 
       # 5️⃣ Upload test results
       - name: Upload test results
